@@ -3,8 +3,6 @@
 
 #include <nds.h>
 
-const s32 GLYPH_MAP_SIZE = 32;
-
 namespace WoopsiUI {
 
 	class MutableBitmapBase;
